created a quick project using querySelectors to make changes on the document

--- a/dom-studies/index.html
+++ b/dom-studies/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="box">
         <div class="test-box">Changing colors</div>
+        <div class="instructions">Click on the buttons bellow to change the background color above</div>
         <div class="buttons">
         <button class="b-red" onclick="red()">Red</button>
         <button class="b-green" onclick="green()">Green</button>
